testsuite/tests/linear/should_fail/LinearRecordUpdate.stderr

LinearRecordUpdate.hs:8:12: error:
    • Couldn't match type ‘'Omega’ with ‘'One’
        arising from an application
    • In an equation for ‘shouldFail’: shouldFail r = r {y = False}
